@@ -1,3 +1,10 @@
+2005-04-27  Roman Kennke  <roman@kennke.org>
+
+	* javax/swing/plaf/basic/BasicScrollBarUI.java
+	(configureScrollBarColors: Changed key 'ScrollBar.thumbLightShadow'
+	to 'ScrollBar.thumbShadow'. The formes does not exist.
+	(paintThumb): Use BasicGraphicsUtils for painting the thumb.
+
 2005-04-27  Chris Burdess  <dog@gnu.org>
 
 	* java/net/protocol/http/HTTPURLConnection.java (connect): Accept
